# riow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
exts/: CMakeLists.txt
riow/: aarect.h  box.h  bvh.cpp  bvh.h  bvh_model.h  bvh_structs.h  callbacks.h  camera.h  color.h  constant_medium.h  envmap.h  hit_record.h  hittable.h  hittable_list.h  imgui.ini  material.h  medium.h  model.h  onb.h  pathtracer.h  pdf.h  plane.h  rawdata.h  riow.cpp  riow.sln  riow.vcxproj  riow.vcxproj.filters  rnd.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  tracer.h  tracer_callback.h  vec3.cpp  vec3.h
riow/hdrs/: christmas_photo_studio_04_1k.hdr
riow/shaders/lines/: fragment.glsl  vertex.glsl
riow/shaders/scene/: fragment.glsl  vertex.glsl
riow/shaders/screen_texture/: vertex.glsl
riow/shaders/zoom_pixel/: vertex.glsl
riow/tool/: camera.h  glad.c  imguiManager.h  lines.h  scene.h  screen_texture.h  shader.h  tool.cpp  tool.h  tracer_data.h  window.cpp  window.h  zoom_pixel.h
vren/: CMakeLists.txt  Film.h  box.h  bvh.cpp  callbacks.h  camera.h  color.h  envmap.h  hit_record.h  hittable.h  hittable_list.h  main.cpp  material.h  measured_mediums.h  medium.h  model.h  onb.h  pathtracer.h  pdf.h  plane.h  rawdata.h  ray.h  rtweekend.h  sphere.h  tracer.h  tracer_callback.h  vec3.h
vren-gui/: CMakeLists.txt  main.cpp
vren-gui/exts/glad/: glad.h
vren-gui/shaders/screen_texture/: fragment.glsl
vren-gui/shaders/zoom_pixel/: fragment.glsl
vren-gui/tool/: imGuiManager.cpp  imguiManager.h  lines.h  screen_texture.h  tool.cpp  tool.h  tool_callbacks.h  widgets.h  window.cpp  window.h  zoom_pixel.h
