set(YOCTO_OPENGL OFF CACHE BOOL " " FORCE)
set(YOCTO_APPS OFF CACHE BOOL " " FORCE)
set(YOCTO_DENOISE OFF CACHE BOOL " " FORCE)
set(YOCTO_EMBREE ON CACHE BOOL " " FORCE)
set(YOCTO_TESTING OFF CACHE BOOL " " FORCE)
add_subdirectory(yocto-gl)

if(VREN_GUI)

add_subdirectory(glm)

set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL " " FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL " " FORCE)
set(GLFW_BUILD_DOCS OFF CACHE BOOL " " FORCE)
set(GLFW_INSTALL OFF CACHE BOOL " " FORCE)
add_subdirectory(glfw)

endif()

